<resources>
    <string name="app_name">TripAndroidProject</string>
    <string name="Create_your_account">Create your account</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="ChooseImage">ChooseImage</string>
    <string name="Create">Create</string>
    <string name="Image">Image</string>
    <string name="SignUp">SignUp</string>
    <string name="Login">LogIn</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="Start">Start</string>
    <string name="UpComingTrip">UpComingTrip</string>
    <string name="TripName">Trip Name</string>
    <string name="Add">Add</string>
    <string name="History">History</string>
    <string name="Confimation">Are you sure to delete trip?</string>
    <string name="Warnning">Warning</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Description">Description</string>
    <string name="Rounded">Rounded</string>
    <string name="Repeat">Repeat</string>
    <string name="TripDate">Trip Date</string>
    <string name="TripTime">Trip Time</string>
    <string name="StartLocation">Start Location</string>
    <string name="Pick">Pick</string>
    <string name="Destination">Destination</string>
    <string name="RoundDate">Round Date</string>
    <string name="RoundTime">Round Time</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="TripDetails">Trip Details</string>
    <string name="Round">Round</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="close">close</string>
    <string name="map_key" translatable="false">AIzaSyCVOvMSNN18_AJKQjfKfoWKxsYNF5GNxK0</string>
    <string name="save">Save</string>
    <string name="finishTrip">Finish</string>
    <string name="editimg">Edit Image</string>
    <string name="edit">Edit</string>

    <string-array name="RepeatEvery">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Never</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget">Forget Password?</string>
    <string name="getpass">Get Password</string>
    <string name="enter">Enter your email</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>
