<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deleteAlertDialog"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quantum_bluegrey100"
        android:id="@+id/deleteAlertLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteTitle"
            android:text="@string/Warnning"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:background="@color/quantum_googredA700"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteMessage"
            android:textColor="@color/quantum_black_100"
            android:text="@string/Confimation"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonNo"
        android:text="@string/No"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:background="@color/quantum_grey200"
        app:layout_constraintBottom_toBottomOf="@+id/deleteAlertLayout"
        app:layout_constraintEnd_toStartOf="@+id/buttonYes"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAlertLayout"/>

    <Button
        android:id="@+id/buttonYes"
        android:text="@string/Yes"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        android:background="@color/quantum_grey200"
        app:layout_constraintBottom_toBottomOf="@+id/deleteAlertLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNo"
        app:layout_constraintTop_toBottomOf="@+id/deleteAlertLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>